--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@
   margin-right: 20px;
   border: none;
   outline: none;
-  color: #97999b;
+  color: #ffffff;
   background-color: #f75454;
   border-radius: 50px;
   text-transform: uppercase;
