--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -11,13 +11,15 @@ body {
 }
 div,
 section {
-  overflow: hidden;
   box-sizing: border-box;
+}
+.section-wrapper {
+  padding-top: 100px;
+  padding-bottom: 80px;
 }
 .section-title {
   display: block;
   margin: 0 auto;
-  margin-top: 100px;
   margin-bottom: 60px;
 }
 h1,
@@ -27,6 +29,8 @@ h4,
 h5,
 h6 {
   font-family: "Josefin Sans", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 h1,
 h2,
@@ -64,7 +68,7 @@ h3 {
 }
 h4 {
   font-family: "Josefin Sans", sans-serif;
-  font-size: 24px;
+  font-size: 19px;
   font-weight: 600;
   color: #1a1a1a;
 }
@@ -79,6 +83,12 @@ p {
   font-size: 15px;
   font-weight: 400;
   color: #666666;
+  padding: 0;
+  margin: 0;
+}
+ul,
+li {
+  list-style: none;
 }
 a > button {
   font-family: "Poppins", sans-serif;
@@ -105,21 +115,21 @@ span {
   font-family: "Open Sans", sans-serif;
   font-size: 12px;
   font-weight: 600;
-  display: block;
   color: #f75454;
 }
-span.sub-title {
+span.sub-heading {
   font-family: "Open Sans", sans-serif;
   font-size: 12px;
   font-weight: 600;
-  text-align: center;
-}
-.sub-title {
-  font-family: "Open Sans", sans-serif;
-  font-size: 14px;
-  font-weight: 600;
   text-transform: uppercase;
   text-align: center;
+}
+.sub-heading {
+  font-family: "Open Sans", sans-serif;
+  font-size: 12px;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-align: left;
   color: #f75454;
 }
 a {
@@ -128,6 +138,6 @@ a {
 }
 img {
   width: 100%;
-  height: 100%;
+  height: auto;
   display: block;
 }
