--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,30 +3,62 @@ LATEST BLOG SECTION  STYLES
 =============================== */
 .blog-section {
   background: #ffffff;
+  padding-top: 50px;
+  padding-bottom: 30px;
 }
 
-.thamnail-block {
-  width: 100%;
-  height: 100%;
-  padding-bottom: 80px;
-  position: relative;
-}
 .thamnail-block .iteam-blog-01 {
   position: relative;
-  z-index: 1;
-  margin-bottom: 60px;
+  margin-bottom: 150px;
+}
+.thamnail-block .iteam-blog-01 .iteam-imgage {
+  position: relative;
 }
 
-.thamnail-block .iteam-blog-01 .blog-content {
+.thamnail-block .iteam-blog-01 .iteam-blog-content {
+  background: #fff;
+  /* padding: 30px 0px 30px 20px; */
   position: absolute;
-  content: "";
+  bottom: -130px;
   right: 0;
-  bottom: -150px;
-  z-index: 3;
-  display: block;
-  background: #ffffff;
+  width: 100%;
+  height: auto;
+  max-width: 495px;
+  padding: 34px 40px;
+  transition: 0.3s linear;
+  z-index: 999;
 }
-.thamnail-block .iteam-blog-01 .v2-box {
+.thamnail-block .iteam-blog-01:hover .iteam-blog-content {
+  box-shadow: 0px 8px 30px rgb(15 50 63 / 6%);
+}
+.thamnail-block .iteam-blog-01 .iteam-blog-content p#sub-heading {
+  color: #797a7b;
+  text-transform: uppercase;
+  font-size: 12px;
+  padding-bottom: 10px;
+}
+.thamnail-block .iteam-blog-01 .iteam-blog-content p#sub-heading .date {
+  color: #1a1a1a;
+}
+.thamnail-block .iteam-blog-01 .iteam-blog-content h3 {
+  color: #1a1a1a;
+  margin-top: 15px;
+  margin-bottom: 20px;
+}
+.iteam-blog-content .comments-link {
+  padding-left: 0;
+}
+.iteam-blog-content .comments-link li {
+  display: inline-block;
+}
+.iteam-blog-content .comments-link li a {
+  color: #797a7b;
+  font-size: 13px;
+}
+.iteam-blog-content .comments-link li i {
+  padding-right: 8px;
+}
+.thamnail-block .iteam-blog-01 .right-content {
   position: absolute;
   content: "";
   right: 0;
@@ -34,57 +66,18 @@ LATEST BLOG SECTION  STYLES
   z-index: 3;
   display: block;
   background: #ffffff;
-}
-
-.thamnail-block .iteam-blog-01 .blog-content .content-wrapper {
-  width: 100%;
-  height: auto;
-  max-width: 495px;
-  padding: 34px 40px;
-}
-
-.thamnail-block .iteam-blog-01 .blog-content .v2 {
   padding: 25px 20px;
   width: 100%;
   max-width: 245px;
-  transition: 04s linear;
+  transition: 0.4s linear;
 }
-.thamnail-block:hover .iteam-blog-01 .blog-content .v2 {
-  box-shadow: 0px 6px 47px #e7e7e7;
-}
-
-.thamnail-block .iteam-blog-01 .blog-content .v2 h4 {
+.thamnail-block .iteam-blog-01 .right-content h4 {
   margin: 19px 0px 16px;
 }
-
-.thamnail-block .iteam-blog-01 .blog-content p#sub-heading {
-  color: #797a7b;
-  text-transform: uppercase;
-  font-size: 12px;
-  margin-bottom: 0;
-}
-
-.thamnail-block .iteam-blog-01 .blog-content p#sub-heading .date {
-  color: #1a1a1a;
-}
-
-.thamnail-block .iteam-blog-01 .blog-content h3 {
-  color: #1a1a1a;
-  margin-top: 15px;
-  margin-bottom: 20px;
-}
-.blog-content .comments-link {
-  padding-left: 0;
-}
-.blog-content .comments-link li {
-  display: inline-block;
-}
-.blog-content .comments-link li a {
+.thamnail-block .iteam-blog-01 .right-content .comments-link li a {
   color: #797a7b;
   font-size: 13px;
-}
-.blog-content .comments-link li i {
-  padding-right: 8px;
+  text-transform: uppercase;
 }
 
 /*==================
