--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,7 @@ LATEST BLOG SECTION  STYLES
 =============================== */
 .blog-section {
   background: #ffffff;
-  padding-top: 50px;
-  padding-bottom: 30px;
+  padding: 50px 0;
 }
 
 .thamnail-block .iteam-blog-01 {
@@ -19,11 +18,11 @@ LATEST BLOG SECTION  STYLES
   background: #fff;
   /* padding: 30px 0px 30px 20px; */
   position: absolute;
-  bottom: -130px;
+  bottom: -168px;
   right: 0;
-  width: 100%;
+  width: 93%;
   height: auto;
-  max-width: 495px;
+  max-width: 100%;
   padding: 34px 40px;
   transition: 0.3s linear;
   z-index: 999;
@@ -67,8 +66,9 @@ LATEST BLOG SECTION  STYLES
   display: block;
   background: #ffffff;
   padding: 25px 20px;
-  width: 100%;
-  max-width: 245px;
+  width: 93%;
+  height: auto;
+  max-width: 100%;
   transition: 0.4s linear;
 }
 .thamnail-block .iteam-blog-01 .right-content h4 {
