--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -58,7 +58,7 @@ h2 {
   width: 70px;
   height: 2px;
   background: red;
-  margin: 20px auto;
+  margin: 9px auto;
 }
 h3 {
   font-family: "Josefin Sans", sans-serif;
@@ -68,7 +68,7 @@ h3 {
 }
 h4 {
   font-family: "Josefin Sans", sans-serif;
-  font-size: 19px;
+  font-size: 20px;
   font-weight: 600;
   color: #1a1a1a;
 }
@@ -115,12 +115,12 @@ span {
   font-family: "Open Sans", sans-serif;
   font-size: 12px;
   font-weight: 600;
-  color: #f75454;
 }
 span.sub-heading {
   font-family: "Open Sans", sans-serif;
   font-size: 12px;
   font-weight: 600;
+  color: #f75454;
   text-transform: uppercase;
   text-align: center;
 }
@@ -140,4 +140,47 @@ img {
   width: 100%;
   height: auto;
   display: block;
+}
+.iteam-blog-01 {
+  position: relative;
+}
+.iteam-contents {
+  position: absolute;
+  content: "";
+  right: 0;
+  bottom: -131px;
+  z-index: 3;
+  display: block;
+  background: #ffffff;
+  padding: 25px 20px;
+  width: 93%;
+  height: auto;
+  max-width: 245px;
+  transition: 0.4s linear;
+}
+.iteam-blog-01:hover .iteam-contents {
+  box-shadow: 0px 8px 30px rgb(15 50 63 / 6%);
+}
+.iteam-contents h4 {
+  margin: 19px 0px 16px;
+}
+span.date {
+  color: #797a7b;
+  text-transform: uppercase;
+  font-size: 12px;
+  padding-bottom: 10px;
+}
+.comments-link {
+  padding-left: 0;
+}
+.comments-link li {
+  display: inline-block;
+}
+.comments-link li a {
+  color: #797a7b;
+  font-size: 13px;
+}
+.comments-link li i {
+  padding-right: 8px;
+  font-size: inherit;
 }
