--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -135,6 +135,10 @@ span.sub-heading {
 a {
   text-decoration: none;
   display: inline-block;
+  color: inherit;
+  font-size: inherit;
+  font-family: inherit;
+  font-weight: inherit;
 }
 img {
   width: 100%;
