--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -147,9 +147,20 @@ img {
 }
 .iteam-blog-01 {
   position: relative;
+  /* margin-bottom: 30px; */
 }
 .iteam-contents {
-  position: absolute;
+  position: relative;
+  z-index: 3;
+  display: block;
+  background: #ffffff;
+  padding: 27px;
+  padding-right: 0;
+  margin-top: -40px;
+  margin-left: auto;
+  transition: 0.4s linear;
+  width: calc(100% - 30px);
+  /* position: absolute;
   content: "";
   right: 0;
   bottom: -131px;
@@ -160,12 +171,27 @@ img {
   width: 93%;
   height: auto;
   max-width: 245px;
+  transition: 0.4s linear; */
+}
+.iteam-blog-content {
+  position: relative;
+  z-index: 3;
+  display: block;
+  background: #ffffff;
+  padding: 40px;
+  padding-right: 0;
+  margin-top: -70px;
+  margin-left: auto;
   transition: 0.4s linear;
+  width: calc(100% - 60px);
 }
 .iteam-blog-01:hover .iteam-contents {
   box-shadow: 0px 8px 30px rgb(15 50 63 / 6%);
 }
-.iteam-contents h4 {
+.iteam-blog-01:hover .iteam-blog-content {
+  box-shadow: 0px 8px 30px rgb(15 50 63 / 6%);
+}
+.iteam-blog-content h4 {
   margin: 19px 0px 16px;
 }
 span.date {
