--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ HEADER TOP ROW SECTION  STYLES
 }
 .header-top-contents {
   display: flex;
+  flex-wrap: wrap;
   align-items: baseline;
   justify-content: center;
   font-family: "Josefin Sans";
@@ -165,25 +166,49 @@ HEADER TOP ROW SECTION  STYLES END
 /*==================
 BANNER SECTION  STYLES 
 =============================== */
-.banner-wrapper .iteam-contents {
+section#banner {
+  padding-bottom: 100px;
+}
+section#banner .banner-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.banner-column-left {
+  flex-basis: 100%;
+  max-width: 44.27%;
+}
+.banner-column-middle {
+  flex-basis: 100%;
+  max-width: 28.906%;
+}
+.banner-column-right {
+  flex-basis: 100%;
+  max-width: 23.697%;
+}
+
+.banner-column-left .iteam-contents {
   padding: 40px;
   padding-right: 0;
   width: calc(100% - 330px);
   margin-top: -236px;
 }
-.banner-wrapper .iteam-contents h3 {
+.banner-column-left .iteam-contents h3 {
   padding: 22px 0px;
 }
-.banner-wrapper .iteam-contents p {
+.banner-column-left .iteam-contents p {
   font-weight: 600;
   display: inline-block;
   text-transform: uppercase;
 }
-.banner-wrapper .iteam-contents .man {
+.banner-column-left .iteam-contents .man {
   color: #1a1a1a;
 }
-
-.banner-section .banner-card {
+.banner-column-left:hover .iteam-contents {
+  box-shadow: 0px 8px 30px rgb(15 50 63 / 6%);
+}
+.banner-column-middle .banner-card {
   width: 100%;
   height: auto;
   background-color: #fff;
@@ -193,7 +218,7 @@ BANNER SECTION  STYLES
   transition: 0.4s ease-out;
   box-shadow: 0px 7px 10px rgba(black, 0.5);
 }
-.banner-section .banner-card::before {
+.banner-column-middle .banner-card::before {
   content: "";
   position: absolute;
   top: 0;
@@ -207,11 +232,11 @@ BANNER SECTION  STYLES
   opacity: 0;
 }
 
-.banner-section .banner-card img {
+.banner-column-middle .banner-card img {
   width: 100%;
   height: auto;
 }
-.banner-section .banner-card .middle-content {
+.banner-column-middle .banner-card .middle-content {
   position: absolute;
   top: 50%;
   left: 0;
@@ -225,24 +250,45 @@ BANNER SECTION  STYLES
   transition: 0.5s;
   padding: 50% 0;
 }
-.banner-card:hover::before {
+.banner-column-middle .banner-card:hover::before {
   opacity: 1;
 }
-.banner-card:hover .middle-content {
+.banner-column-middle .banner-card:hover .middle-content {
   opacity: 1;
-  background: #514c4a80;
+  background: url(../images/banner/middle-overlay.png) no-repeat center center;
+  background-size: cover;
 }
 
-.banner-section .middle-content p,
-.banner-section .middle-content span {
+.banner-column-middle .middle-content p,
+.banner-column-middle .middle-content span {
   color: #ffffff;
   text-align: center;
   text-transform: uppercase;
 }
-.banner-section .middle-content h3 {
+.banner-column-middle .middle-content h3 {
   color: #ffffff;
   padding: 22px 0;
-  padding-left: 40px;
+  text-align: center;
+}
+
+/* BANNER RIGHT SIDE  */
+.banner-column-right .banner-right {
+  position: relative;
+  margin-bottom: 30px;
+}
+.banner-column-right .banner-right .iteam-contents {
+  position: relative;
+  margin: 0 auto;
+  padding: 27px;
+  width: 100%;
+  max-width: 345px;
+  margin-top: -140px;
+}
+.banner-column-right .banner-right:hover .iteam-contents {
+  box-shadow: 0px 8px 30px rgb(15 50 63 / 6%);
+}
+.banner-column-right .banner-right .iteam-contents h4 {
+  padding-top: 14px;
 }
 /*==================
 BANNER SECTION  STYLES  END
@@ -565,6 +611,8 @@ LATEST BLOG SECTION  END
   text-align: center;
   font-size: 14px;
   margin-bottom: 34px;
+  text-transform: uppercase;
+  color: #f75454;
 }
 .subcription-title-box .heading-title {
   margin-bottom: 60px;
