--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,14 +1,13 @@
 @media (max-width: 991px) {
   .thamnail-block .iteam-blog-01 {
     position: relative;
-    margin-bottom: 180px;
   }
-  .thamnail-block .iteam-blog-01 .iteam-blog-content {
+  /* .thamnail-block .iteam-blog-01 .iteam-blog-content {
     bottom: -168px;
   }
   .thamnail-block .iteam-blog-01 .right-content {
     bottom: -125px;
-  }
+  } */
 }
 @media (max-width: 767px) {
   /* .thamnail-block .iteam-blog-01 {
