--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,24 @@ HEADER TOP ROW SECTION  STYLES
   padding: 25px 0px;
   border-bottom: 1px solid #e5e8ea;
 }
+.header-middle-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.header-social-icon {
+  flex-basis: 100%;
+  max-width: 17.543%;
+}
+.header-middle-wrapper .logo {
+  flex-basis: 100%;
+  max-width: 11.754%;
+}
+.header-middle-wrapper .search-bar {
+  flex-basis: 100%;
+  max-width: 15.789;
+}
 .header-social-icon a {
   font-size: 14px;
   color: #1a1a1a;
@@ -87,7 +105,7 @@ HEADER TOP ROW SECTION  STYLES
   background-color: #ff3c44;
 }
 .header-middle-section .logo {
-  margin-top: 5px;
+  /* margin-top: 5px; */
 }
 .header-middle-section .logo a,
 .header-middle-section .logo img {
@@ -497,11 +515,48 @@ TRAVEL BLOG SECTION  STYLES
 
 /* TRAVELS RIGHT BLOGS  */
 .travel-right-blog {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
   margin-bottom: 40px;
 }
-.travel-right-blog .iteam-content {
-  margin-left: 30px;
+.travel-right-blog .iteam-image {
+  flex-basis: 100%;
+  max-width: 38.293%;
 }
+.travel-right-blog .iteam-content {
+  flex-basis: 100%;
+  max-width: 55.142%;
+}
+.travel-right-blog .fancy-video {
+  position: relative;
+  z-index: 1;
+}
+.travel-right-blog .fancy-video .video-btn {
+  position: absolute;
+  z-index: 3;
+  display: block;
+  top: 0;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  max-width: 36px;
+  max-height: 36px;
+  color: #fff;
+  border: 1px solid #fff;
+  border-radius: 50px;
+  text-align: center;
+  margin: 76px auto;
+}
+.travel-right-blog .fancy-video .video-btn i {
+  font-size: 13px;
+  color: #fff;
+  text-align: center;
+  display: block;
+  margin-top: 10px;
+}
+
 .travel-right-blog .iteam-content h4 {
   margin-top: 20px;
   margin-bottom: 25px;
@@ -526,19 +581,6 @@ LATEST BLOG SECTION  STYLES
   position: relative;
 }
 
-.thamnail-block .iteam-blog-01 .iteam-blog-content {
-  /* background: #fff;
-  padding: 30px 0px 30px 20px;
-  position: absolute;
-  bottom: -168px;
-  right: 0;
-  width: 93%;
-  height: auto;
-  max-width: 100%;
-  padding: 34px 40px;
-  transition: 0.3s linear;
-  z-index: 999; */
-}
 .thamnail-block .iteam-blog-01:hover .iteam-blog-content {
   box-shadow: 0px 8px 30px rgb(15 50 63 / 6%);
 }
@@ -556,6 +598,10 @@ LATEST BLOG SECTION  STYLES
   margin-top: 15px;
   margin-bottom: 20px;
   width: calc(100% - 61px);
+  transition: 0.4s linear;
+}
+.thamnail-block .iteam-blog-01 .iteam-blog-content h3:hover a {
+  color: #f75454;
 }
 .iteam-blog-content .comments-link {
   padding-left: 0;
@@ -570,18 +616,7 @@ LATEST BLOG SECTION  STYLES
 .iteam-blog-content .comments-link li i {
   padding-right: 8px;
 }
-/* .thamnail-block .iteam-blog-01 .right-content {
-  position: relative;
-  z-index: 3;
-  display: block;
-  background: #ffffff;
-  padding: 27px;
-  padding-right: 0;
-  margin-top: -40px;
-  margin-left: auto;
-  transition: 0.4s linear;
-  width: calc(100% - 20px);
-} */
+
 .thamnail-block .iteam-blog-01 .right-content h4 {
   margin: 19px 0px 16px;
 }
@@ -590,7 +625,30 @@ LATEST BLOG SECTION  STYLES
   font-size: 13px;
   text-transform: uppercase;
 }
+/* BOLG SECTION RIGHT SIDE  */
 
+.thamnail-block-right {
+  margin-bottom: 25px;
+}
+.thamnail-block-right .box-content {
+  padding: 27px;
+  padding-right: 0;
+}
+.thamnail-block-right .box-content h4 {
+  padding-top: 24px;
+  padding-bottom: 29px;
+}
+
+.thamnail-block-right .box-content h4:hover a {
+  color: #f75454;
+}
+.thamnail-block-right .box-content .date {
+  font-family: "Open Sans", sans-serif;
+  font-size: 12px;
+  font-weight: 600;
+  color: #797a7b;
+  text-transform: capitalize;
+}
 /*==================
 LATEST BLOG SECTION  END
 =============================== */
@@ -599,7 +657,8 @@ LATEST BLOG SECTION  END
 .subcription-section {
   display: block;
   overflow: hidden;
-  padding: 120px 0px;
+  padding-top: 115px;
+  padding-bottom: 120px;
   background: #fdf8f5;
 }
 .subcription-title-box {
