--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,4 +1,37 @@
+@media (max-width: 1199.98px) {
+  .banner-column-left .iteam-contents {
+    width: calc(100% - 240px);
+  }
+}
 @media (max-width: 991px) {
+  .menu-section .navbar {
+    padding-top: 0;
+  }
+  .main-nav {
+    background-color: #fff;
+    position: absolute;
+    top: 66px;
+    left: 0;
+    width: 100%;
+    height: 350px;
+    overflow-y: scroll;
+    display: none;
+    text-align: left;
+    z-index: 999;
+    box-shadow: 0px 5px 5px #bfbfbf61;
+  }
+  .main-nav .nav-item {
+    border-top: 1px solid rgba(37, 37, 37, 0.1);
+  }
+  .main-nav .nav-item a {
+    color: #1a1a1a;
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+    padding: 13px 15px;
+    width: 100%;
+    line-height: 30px;
+  }
   .thamnail-block .iteam-blog-01 {
     position: relative;
   }
@@ -28,6 +61,13 @@
 @media (max-width: 575px) {
   h2 {
     font-size: 25px;
+  }
+  .header-middle-wrapper {
+    justify-content: center;
+  }
+  .header-social-icon {
+    margin-bottom: 30px;
+    justify-content: center;
   }
   .thamnail-block .iteam-blog-01 .iteam-blog-content {
     bottom: -90%;
